# practitioners-workshop-2024

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
About/: index.html
contact_us/: index.html
docs/: .pages  contact_us.md  faq.md  index.md  organizers.md  speakers.md
docs/About/: index.md
docs/RSVP/: index.md
faq/: index.html
organizers/: index.html
search/: search_index.json
speakers/: index.html
